--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,9 +5,10 @@ compatibility_date = "2023-09-04"
 
 main = "index.js"
 
-# Don't put your application key in this file!
-# You should set it as a secret in the Cloudflare dashboard or at the command line:
+# Don't put your application key or token secret in this file!
+# You should set them as secrets in the Cloudflare dashboard or at the command line:
 # echo "<your b2 application key>" | wrangler secret put B2_APPLICATION_KEY
+# echo "<your token secret>" | wrangler secret put TOKEN_SECRET
 [vars]
 B2_APPLICATION_KEY_ID = "<your b2 application key id>"
 B2_ENDPOINT = "<your endpoint - e.g. s3.us-west-001.backblazeb2.com >"
@@ -22,7 +23,12 @@ BUCKET_NAME = "<your bucket name, $path, or $host>"
 # to list the bucket’s objects. You can allow or deny this functionality in the
 # Worker via ALLOW_LIST_BUCKET
 ALLOW_LIST_BUCKET = "<true, if you want to allow clients to list objects, otherwise false>"
-# If set, the worker will strip the `file/` prefix from incoming request paths.
+# If set, requests whose first path segment matches an entry in this
+# comma-separated list will bypass HMAC token validation entirely (public paths).
+# Requests to all other paths still require a valid ?token=&exp= signature.
+# Example: PATH_WHITELIST = "public,assets"
+# If not set or empty, all requests require a valid token.
+# PATH_WHITELIST = ""
 # See https://rclone.org/b2/#b2-download-url
 RCLONE_DOWNLOAD = "<true, if you are using the Worker to proxy downloads for rclone, otherwise false>"
 # If set, these headers will be included in the signed upstream request
